Use Math.clamp for hand-rolled max/min clamps (#36)
Collapse nine nested Math.max(lo, Math.min(hi, v)) clamp idioms across eight
backend files into Java 21 Math.clamp(v, lo, hi). Behavior-preserving; the
int-valued overload widens each value to long and returns int.